--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
 
 		<link rel="stylesheet" href="http://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.4.0/css/font-awesome.min.css">
 
+		<link rel="stylesheet" href"animate.css">
+
 		<link rel="stylesheet" href="main.css">
 
 	</head>
